objects/APTS_Pricing_Master_Data_Cube__c.object
<CustomObject>
    <fields>
        <fullName>APTS_VKORG__c</fullName>
        <description>Sales Organisation</description>
        <label>Sales Organisation</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_VRKME__c</fullName>
        <description>Sales Unit</description>
        <label>Sales Unit</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_VSART__c</fullName>
        <description>Shipping Type</description>
        <label>Shipping Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_VSBED__c</fullName>
        <description>Shipping Conditions</description>
        <label>Shipping Conditions</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_VSTEL__c</fullName>
        <description>Shipping Point</description>
        <label>Shipping Point</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_VTWEG__c</fullName>
        <description>Distribution Channel</description>
        <label>Distribution Channel</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_VoltAndFreq__c</fullName>
        <label>VoltAndFreq</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_VoltageClassHV1__c</fullName>
        <defaultValue>24</defaultValue>
        <label>VoltageClassHV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_VoltageClassHV2__c</fullName>
        <label>VoltageClassHV2</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_VoltageClassHV3__c</fullName>
        <label>VoltageClassHV3</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_VoltageClassLV1__c</fullName>
        <defaultValue>1.1</defaultValue>
        <label>VoltageClassLV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_VoltageClassLV2__c</fullName>
        <label>VoltageClassLV2</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_VoltageClassLV3__c</fullName>
        <defaultValue>1.1</defaultValue>
        <label>VoltageClassLV3</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_VoltageClassTV1__c</fullName>
        <label>VoltageClassTV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_VoltageHV1__c</fullName>
        <defaultValue>20000</defaultValue>
        <label>VoltageHV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_VoltageHV2__c</fullName>
        <label>VoltageHV2</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_VoltageHV3__c</fullName>
        <label>VoltageHV3</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_VoltageLV1__c</fullName>
        <defaultValue>400</defaultValue>
        <label>VoltageLV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_VoltageLV2__c</fullName>
        <label>VoltageLV2</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_VoltageLV3__c</fullName>
        <label>VoltageLV3</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_VoltageTV1__c</fullName>
        <label>VoltageTV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_WADAT_IST__c</fullName>
        <description>Actual Goods Movement Date</description>
        <label>Actual Goods Movement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_WAERK_AD__c</fullName>
        <description>Currency</description>
        <label>Currency Additional Data</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_WAERK__c</fullName>
        <description>SD Document Currency</description>
        <label>SD Document Currency</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_WAVWR_ASSOLD__c</fullName>
        <description>Cost in document currency - First fill</description>
        <label>Cost in Doc. Currency</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_WAVWR_FC__c</fullName>
        <label>Current Cost - Factory Currency</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_WAVWR__c</fullName>
        <description>Cost in document currency</description>
        <label>Cur. Cost in Doc. Currency</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_WindingsAdditional__c</fullName>
        <label>WindingsAdditional</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_WindingsSecondary__c</fullName>
        <label>WindingsSecondary</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Won__c</fullName>
        <formula>IF(APTS_Line_Status_Pricing__c = &apos;WON&apos;,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Won</label>
        <type>Checkbox</type>
    </fields>
    <label>Pricing+ Master Data Cube</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>APTS_BAL_ID__c</columns>
        <columns>APTS_Frequency__c</columns>
        <columns>APTS_Won__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>APTS_FACE_REF_ID__c</columns>
        <columns>APTS_FACE_REF_LINEID__c</columns>
        <columns>APTS_Account__c</columns>
        <columns>APTS_Line_Status_CCP__c</columns>
        <columns>APTS_Line_Status_ERP__c</columns>
        <columns>APTS_BAL_ID__c</columns>
        <columns>APTS_Product__c</columns>
        <columns>APTS_Industry_Usage__c</columns>
        <columns>APTS_ERPID__c</columns>
        <columns>APTS_Won__c</columns>
        <columns>APTS_Quote_Creation_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Product__c</field>
            <operation>equals</operation>
            <value>9AAC30400735</value>
        </filters>
        <filters>
            <field>APTS_BAL_ID__c</field>
            <operation>equals</operation>
            <value>9AAE304851</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MD-{00000000}</displayFormat>
        <label>Pricing+ Master Data Cube Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing+ Master Data Cube</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>